--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ header {
 .logo {
     flex-grow: 1;
     margin-right: 2rem;
+    cursor: pointer;
 }
 
 .header-btn {
@@ -53,7 +54,7 @@ header {
 }
 
 #editor-container {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
@@ -64,7 +65,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #00ced1;
+    background-color: #a7aeae;
     height: 500px;
     width: 500px;
     border-radius: 20px;
@@ -73,4 +74,53 @@ header {
 canvas {
     border-radius: 20px; 
     margin: 50px;
+}
+
+#text-input {
+    margin: 20px;
+    height: 5vh;
+    border-radius: 20px;
+}
+
+#add-text-btn {
+    background-color: rgb(10, 233, 10);
+    color: white;
+}
+
+#clear-text-btn {
+    background-color: rgb(233, 10, 10);
+    color: white;
+}
+#select-text-btn {
+    background-color: rgb(10, 140, 233);
+    color: white;
+}
+
+.adjust-btn {
+    background-color: #00ced1;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 10vh; /* Ajustez la hauteur en fonction de vos besoins */
+    border-radius: 20px;
+    margin: 20px;
+}
+
+@media screen and (max-width: 740px) {
+    #editor-container {
+        margin-top: 10px; /* Ajustez la marge pour une meilleure apparence sur les petits écrans */
+        flex-direction: column;
+    }
+
+    .editor-console {
+        height: 80%; /* Ajustez la hauteur automatiquement sur les petits écrans */
+        width: 100%; /* Utilisez une largeur plus grande sur les petits écrans */
+    }
+
+    canvas {
+        height: 80%; /* Ajustez la hauteur automatiquement sur les petits écrans */
+        width: 100%; 
+        margin: 15px;
+    }
 }
