--- a/main.css
+++ b/main.css
@@ -49,8 +49,25 @@ header {
     width: 100%;
 }
 
+.search-container {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+    gap: 60px;
+}
+
 #search-bar {
-    width: 200px;
+    width: 25rem;
+    height: 3rem;
+    margin-bottom: 10px;
+    border-radius: 20px;
+}
+
+.keyword-container {
+    /* Add styles if needed */
+    width: 25rem;
+    margin-bottom: 10px;
+    color: rgb(255, 255, 255);
 }
 
 #gallery {
