--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     background-color: #2c3e50;
+
 }
 
 header {
@@ -11,7 +12,7 @@ header {
 
 .logo {
     flex-grow: 1;
-    margin-right: 2rem;
+    margin-right: 1rem;
     cursor: pointer;
     font-size: 24px;
     transition: transform 0.3s ease-in-out;
@@ -57,17 +58,19 @@ header {
 }
 
 #search-bar {
-    width: 25rem;
+    width: 100%;
+    max-width: 300px;
     height: 3rem;
     margin-bottom: 10px;
     border-radius: 20px;
 }
 
 .keyword-container {
-    width: 25rem;
+    width: 100%;
     margin-bottom: 10px;
     color: rgb(255, 255, 255);
 }
+
 
 #gallery {
     display: flex;
@@ -104,13 +107,17 @@ header {
     text-align: center;
     background-color: #a7aeae;
     height: 500px;
-    width: 500px;
+    width: 100%;
+    /* Adjust width for responsiveness */
+    max-width: 500px;
+    /* Set a maximum width */
     border-radius: 20px;
 }
 
 canvas {
     border-radius: 20px;
-    margin: 50px;
+    margin: 2rem;
+    /* Adjust margin for responsiveness */
 }
 
 #text-input {
@@ -190,21 +197,33 @@ canvas {
     width: 130px;
     margin: 10px;
 }
-
 @media screen and (max-width: 740px) {
+    .search-container {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    #search-bar,
+    .keyword-container {
+        width: 90vw;
+        max-width: none;
+    }
+
+    #gallery,
+    .gallery-image {
+        width: 90vw;
+        max-width: none;
+    }
+
     #editor-container {
-        margin-top: 10px;
+        margin-top: 2vh;
         flex-direction: column;
     }
 
-    .editor-console {
-        height: 80%;
-        width: 100%;
-    }
-
+    .editor-console,
     canvas {
-        height: 80%;
-        width: 100%;
-        margin: 15px;
+        width: 90vw;
+        max-width: none;
+        margin: 4vw 0;
     }
 }
