--- a/main.css
+++ b/main.css
@@ -1,6 +1,9 @@
 body {
     background-color: #2c3e50;
+}
 
+button {
+    cursor: pointer;
 }
 
 header {
@@ -53,22 +56,21 @@ header {
 .search-container {
     display: flex;
     align-items: center;
-    margin-right: 20px;
-    gap: 60px;
+    gap: 20px;
 }
 
-#search-bar {
-    width: 100%;
-    max-width: 300px;
-    height: 3rem;
-    margin-bottom: 10px;
+.search-bar {
+    height: 5vh;
     border-radius: 20px;
+    margin-bottom: 10px;
+    margin-left: 10vw;
 }
 
 .keyword-container {
     width: 100%;
     margin-bottom: 10px;
     color: rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 
@@ -86,12 +88,28 @@ header {
     margin: 10px;
     border: 2px solid transparent;
     border-radius: 20px;
-    transition: border 0.3s;
+    transition: border 3s;
 }
 
 .gallery-image:hover {
     border: 2px solid #333;
     cursor: pointer;
+}
+
+img {
+    transition: transform 0.3s ease-in-out;
+    transform: scale(1);
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin: 10px;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    transition: border 3s;
+}
+
+img:hover {
+    transform: scale(1.07);
 }
 
 #editor-container {
@@ -105,19 +123,20 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #a7aeae;
+    background-color: #8d9191;
     height: 500px;
     width: 100%;
-    /* Adjust width for responsiveness */
     max-width: 500px;
-    /* Set a maximum width */
     border-radius: 20px;
+}
+
+.font-size {
+    display: flex;
 }
 
 canvas {
     border-radius: 20px;
     margin: 2rem;
-    /* Adjust margin for responsiveness */
 }
 
 #text-input {
@@ -168,10 +187,13 @@ canvas {
     margin: 20px;
 }
 
-.font-btn {
-    padding: 8px 12px;
-    margin-right: 8px;
-    font-size: 14px;
+.adjust-btn button {
+    flex: 1;
+    /* Chaque bouton prendra autant de place que possible */
+    margin: 5px;
+    /* Ajoute un peu d'espace entre les boutons */
+    font-size: 16px;
+    /* Ajustez la taille du texte selon vos besoins */
 }
 
 .download-btn {
@@ -197,16 +219,18 @@ canvas {
     width: 130px;
     margin: 10px;
 }
+
+#saved-memes {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    text-align: center;
+}
+
 @media screen and (max-width: 740px) {
     .search-container {
         flex-direction: column;
         align-items: stretch;
-    }
-
-    #search-bar,
-    .keyword-container {
-        width: 90vw;
-        max-width: none;
     }
 
     #gallery,
